--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  /*background-color: #ff0000;*/
 }
 
 .App-logo {
@@ -15,12 +16,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -35,4 +30,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.test{
+  text-align:center;
+  background-color: blue;
+}
+.button {
+  background-color: #008cba; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.button:disabled {
+  opacity: 0.5;
 }
